Upgrade to Maven 4.0.0-rc-3. Contains also opportunistic Javadoc formatting, such as missing dot at the end of first sentences (this is required by Javadoc for identifying the summary).